# project-management-backend/src/main/java/com/biswas/project_management_backend/dto/UserDto.java
@@ -1,6 +1,5 @@
 package com.biswas.project_management_backend.dto;
 
-import com.biswas.project_management_backend.model.enm.Role;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -16,5 +15,5 @@ public class UserDto {
     private Long id;
     private String username;
     private String email;
-    private Role role;
+    private Set<String> roles;
 }
