# project-management-backend/src/main/java/com/biswas/project_management_backend/model/enm/Role.java
@@ -1,6 +1,0 @@
-package com.biswas.project_management_backend.model.enm;
-
-public enum Role {
-    ADMIN,
-    USER
-}
